<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.federicogarateguy.mapchat.MainActivity">

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_message"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessage"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/message"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:hint="@string/message" />


    <Button
        android:text="@string/viewMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_map"
        android:onClick="goToMap"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lvMensajes"
        android:scrollingCache="false"
        android:stackFromBottom="true"
        android:layout_above="@+id/send_message"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_map" />
</RelativeLayout>
